--- a/assets/styles/shared/main-page/title-imgs.scss
+++ b/assets/styles/shared/main-page/title-imgs.scss
@@ -1,5 +1,17 @@
-.title-imgs_img{
-  position: absolute;
-  width: 100%;
-  height: 100%;
-}
+//.title-imgs_img{
+//  position: absolute;
+//  width: 100%;
+//  height: 100%;
+//}
+//
+//.block {
+//  top: 0;
+//  left: 0;
+//  position: sticky;
+//  width: 100%;
+//  height: var(--winHeight);
+//}
+//
+//.block-fixed{
+//  position: fixed;
+//}
