before-img-component-scale

--- a/assets/styles/text.scss
+++ b/assets/styles/text.scss
@@ -1,1 +1,35 @@
+.block-title{
+  font-family: Helvetica;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 19.2px;
+  line-height: 156%;
+  text-transform: uppercase;
+  color: #000000;
+}
+.content-title{
+  font-family: Helvetica;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 58.59px;
+  line-height: 166%;
+  color: #000000;
+}
 
+.content-p{
+  font-family: Garamond;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 24px;
+  line-height: 166%;
+  color: #000000;
+}
+
+.content-btn-text{
+  font-family: Helvetica;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 24px;
+  line-height: 166%;
+  color: #000000;
+}
