main-page-before-size-ref

--- a/assets/styles/text.scss
+++ b/assets/styles/text.scss
@@ -33,3 +33,23 @@
   line-height: 166%;
   color: #000000;
 }
+
+.footer-logo{
+  font-family: Helvetica;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 96px;
+  line-height: 100%;
+ text-transform: uppercase;
+  letter-spacing: -0.05em;
+  color: #000000;
+}
+
+.footer-contacts{
+  font-family: Helvetica;
+  font-style: normal;
+  font-weight: 300;
+  font-size: 19.2px;
+  line-height: 156%;
+  color: #000000;
+}
