before transform scroll logo ref

--- a/assets/styles/text.scss
+++ b/assets/styles/text.scss
@@ -34,6 +34,17 @@
   color: #000000;
 }
 
+.main-page_start-text{
+  font-family: Helvetica;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 73.24px;
+  line-height: 109%;
+  letter-spacing: -0.05em;
+  color: #FFFFFF;
+  text-transform: uppercase;
+}
+
 .footer-logo{
   font-family: Helvetica;
   font-style: normal;
