doing text start

--- a/assets/styles/text.scss
+++ b/assets/styles/text.scss
@@ -45,6 +45,26 @@
   text-transform: uppercase;
 }
 
+.main-page_second-text{
+  font-family: Helvetica;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 73.24px;
+  line-height: 109%;
+  letter-spacing: -0.05em;
+  color: #FFFFFF;
+}
+
+.main-page_small-text{
+  font-family: Helvetica;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 24px;
+  line-height: 100%;
+  letter-spacing: -0.05em;
+  color: #FFFFFF;
+}
+
 .footer-logo{
   font-family: Helvetica;
   font-style: normal;
