start project page

--- a/assets/styles/text.scss
+++ b/assets/styles/text.scss
@@ -42,7 +42,6 @@
   line-height: 109%;
   letter-spacing: -0.05em;
   color: #FFFFFF;
-  text-transform: uppercase;
 }
 
 .main-page_second-text{
@@ -63,6 +62,17 @@
   line-height: 100%;
   letter-spacing: -0.05em;
   color: #FFFFFF;
+}
+
+.nav-menu-btn-text{
+  font-family: SF Pro Display;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 73.24px;
+  line-height: 109%;
+  text-align: center;
+  letter-spacing: -0.05em;
+  color: #000000;
 }
 
 .footer-logo{
