before project component ref

--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -1,3 +1,11 @@
 .main-page__content-title-position{
   margin: 288px 0 0 220px;
 }
+
+.main-content-margin-left-right{
+  margin: 0 120px 0 120px;
+}
+
+.pages-content-margin-left-big{
+  margin-left: 220px;
+}
