--- a/assets/styles/text.scss
+++ b/assets/styles/text.scss
@@ -16,6 +16,10 @@
   color: #000000;
 }
 
+.content-title-bold{
+  font-weight: bold;
+}
+
 .content-p{
   font-family: Garamond;
   font-style: normal;
