project page doing

--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -9,3 +9,10 @@
 .pages-content-margin-left-big{
   margin-left: 220px;
 }
+
+.value {
+  display: flex;
+  flex-direction: column;
+  min-width: 435px;
+  margin-bottom: 37px;
+}
