before news ref

--- a/assets/styles/text.scss
+++ b/assets/styles/text.scss
@@ -1,3 +1,7 @@
+.text-color-white{
+  color: #FFFFFF !important;
+}
+
 .block-title {
   font-family: Helvetica;
   font-style: normal;
@@ -107,4 +111,14 @@
   font-size: 19.2px;
   line-height: 156%;
   color: #000000;
+}
+
+.team-img-description-text{
+  font-family: Garamond;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 37.5px;
+  line-height: 107.5%;
+  letter-spacing: -0.04em;
+  color: #FFFFFF;
 }
