--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -17,6 +17,10 @@
   margin-bottom: 37px;
 }
 
-.project_type_description-margin-top {
+.img-description-margin-top {
   margin-top: 33px;
+}
+
+.img-width-description {
+ width: 810px !important;
 }
