before more 1920px size ref

--- a/assets/styles/reset.scss
+++ b/assets/styles/reset.scss
@@ -17,6 +17,7 @@ time, mark, audio, video, option, input {
   border: 0;
   font-family: Gotham Pro;
   text-decoration: none;
+  cursor: default;
 }
 
 input, textarea {
