--- a/assets/styles/text.scss
+++ b/assets/styles/text.scss
@@ -1,4 +1,4 @@
-.text-color-white{
+.text-color-white {
   color: #FFFFFF !important;
 }
 
@@ -73,7 +73,7 @@
   color: #000000;
 }
 
- .item-project-title-text {
+.item-project-title-text {
   font-family: Garamond;
   font-style: normal;
   font-weight: bold;
@@ -91,7 +91,8 @@
   line-height: 166%;
   color: #000000;
 }
-.item-project_pres-view{
+
+.item-project_pres-view {
   font-family: Helvetica;
   font-style: normal;
   font-weight: normal;
@@ -121,7 +122,7 @@
   color: #000000;
 }
 
-.team-img-description-text{
+.team-img-description-text {
   font-family: Garamond;
   font-style: normal;
   font-weight: bold;
@@ -131,11 +132,36 @@
   color: #FFFFFF;
 }
 
-@media screen and (max-width: 1280px){
-  .main-page_start-text{
+@media screen and (max-width: 1280px) {
+  .main-page_start-text {
     font-size: 48px;
   }
-  .nav-menu-btn-text{
+  .nav-menu-btn-text {
     font-size: 48px;
+  }
+}
+
+@media screen and (max-width: 1024px) {
+  .content-p {
+    font-size: 18px;
+  }
+
+  .content-title{
+    font-size: 36px;
+  }
+
+  .content-btn-text{
+    font-size: 20px;
+  }
+
+  .item-project-title-text{
+    font-size: 36px;
+  }
+
+  .footer-contacts{
+    font-size: 14px;
+  }
+  .item-project_description_value{
+    font-size: 24px;
   }
 }
