--- a/assets/styles/process.scss
+++ b/assets/styles/process.scss
@@ -15,3 +15,12 @@
 .process_img-description_width {
   max-width: 810px !important;
 }
+
+@media screen and (max-width: 1280px){
+  .process_img-wrap_height{
+    height: 580px !important;
+  }
+  .process_img-description_margin-top {
+    margin-top: 43px;
+  }
+}
