before item project 728px ref

--- a/assets/styles/item_project.scss
+++ b/assets/styles/item_project.scss
@@ -26,5 +26,8 @@
   .item-project_img-description_margin-top {
     margin-top: 40px;
   }
+  .item-project_img-wrap_height{
+    height: 520px !important;
+  }
 }
 
