--- a/assets/styles/process.scss
+++ b/assets/styles/process.scss
@@ -32,3 +32,8 @@
     margin-top: 40px;
   }
 }
+@media screen and (max-width: 768px){
+  .process_img-wrap_height{
+    height: 320px !important;
+  }
+}
