--- a/assets/styles/process.scss
+++ b/assets/styles/process.scss
@@ -37,3 +37,11 @@
     height: 320px !important;
   }
 }
+@media screen and (max-width: 414px){
+  .process_img-description_margin-top{
+    margin-top: 50px;
+  }
+  .process_img-wrap_height{
+    height: 520px !important;
+  }
+}
