--- a/assets/styles/text.scss
+++ b/assets/styles/text.scss
@@ -165,3 +165,9 @@
     font-size: 24px;
   }
 }
+
+@media screen and (max-width: 380px){
+  .item-project_description_value{
+    font-size: 18px;
+  }
+}
