--- a/assets/styles/text.scss
+++ b/assets/styles/text.scss
@@ -23,6 +23,9 @@ a {
   font-size: 58.59px;
   line-height: 166%;
   color: #000000;
+  b {
+    font-family: Helvetica;
+  }
 }
 
 .content-title-bold {
