--- a/assets/styles/text.scss
+++ b/assets/styles/text.scss
@@ -112,7 +112,7 @@ a {
 .nav-menu-btn-text {
   font-family: SF Pro Display;
   font-style: normal;
-  font-weight: bold;
+  //font-weight: bold;
   font-size: 73.24px;
   line-height: 109%;
   text-align: center;
